# longevity-hack

./: .gitignore  README.md
api/: Dockerfile  application.py  categories_spiros.csv  makefile  pyproject.toml  traits_categorized.txt  worker.py
api/alembic/: env.py
api/alembic/versions/: 2025_10_18_1528-734ee5ff6a44_add_snp_gwas_and_clinvar_tables.py  2025_10_18_1612-b7ed0377c138_add_timestamps_to_snp_tables.py  2025_10_18_1615-b64d15a4a402_add_unique_constraints_to_snp_tables.py  2025_10_19_2144-f7e6a32a2eaa_add_composite_index_rsid_effect_allele.py  (+12 more)
api/examples/: 23andme_genome_kat_suricata_v5_full_20171221130201.json  AncestryDNA_1.json  geneticgenie-23andme_Timothy_Jones_v5_Full_20230525184457.json  genome_Lilly_Mendel_v4_ui2-comparison.json  processed-23andme_Timothy_Jones_v5_Full_20230525184457.json  processed-promethease-1.json  promethease_comparison.json
api/examples/promethease-1-output_files/: css
api/logenvity/: app_message_processor.py  constants.py
api/longevity/: app_manager.py  app_message_processor.py  category_analyzer.py  constants.py  create_agent_manager.py  create_app_manager.py  gemini_client.py  genome_analyzer.py  genome_format_detector.py  manual_categories.py  messages.py  model.py  pubmed_client.py  snpedia_client.py
api/scripts/: analyze_personal_genome.py  compare_promethease.py  compare_with_genetic_genie.py  compare_with_promethease.py  create_example_analysis.py  filter_traits.py  paper_download.py  parse_genie_html.py  parse_promethease_html.py  populate_snp_database.py  process_gwas_catalog.py  trait_embeddings.py
(+38 files in other folders)
