[project]
name = "longevity-hack-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.15.1",
    "pyyaml>=6.0.2",
    "aiocache>=0.12.3",
    "async-lru>=2.0.5",
    "kiba-core[core-api,database-psql,queue-sqs,requester,storage]==0.5.3.dev42",
]

[dependency-groups]
dev = [
    "kiba-core[types]==0.5.3.dev42",
    "kiba-build==0.1.11.dev9",
    "tabulate>=0.9.0",
    "devtools>=0.12.2",
]
