[project]
name = "longevity-hack-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.15.1",
    "pyyaml>=6.0.2",
    "aiocache>=0.12.3",
    "async-lru>=2.0.5",
    "beautifulsoup4>=4.12.0",
    "kiba-core[core-api,database-psql,queue-sqs,requester,storage]==0.5.3.dev42",
    "python-multipart>=0.0.6",
    "asyncclick>=8.3.0.5",
    "playwright>=1.55.0",
    "sentence-transformers>=5.1.1",
]

[dependency-groups]
dev = [
    "kiba-core[types]==0.5.3.dev42",
    "kiba-build==0.1.11.dev9",
    "tabulate>=0.9.0",
    "devtools>=0.12.2",
]
